# llm-lab

./: .gitignore  README.md  llm_lab.db  pyproject.toml
data/: qa_sample.jsonl
notebooks/: 01_quickstart.ipynb  llm_lab.db
src/llm_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
